--- a/uretimrecetesi.csproj
+++ b/uretimrecetesi.csproj
@@ -36,6 +36,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Windows.Forms.DataVisualization" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -47,14 +48,62 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="bulunan_urunler.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="bulunan_urunler.Designer.cs">
+      <DependentUpon>bulunan_urunler.cs</DependentUpon>
+    </Compile>
     <Compile Include="giris.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="giris.Designer.cs">
       <DependentUpon>giris.cs</DependentUpon>
     </Compile>
+    <Compile Include="guncel_uretim.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="guncel_uretim.Designer.cs">
+      <DependentUpon>guncel_uretim.cs</DependentUpon>
+    </Compile>
+    <Compile Include="hammaddeler.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="hammaddeler.Designer.cs">
+      <DependentUpon>hammaddeler.cs</DependentUpon>
+    </Compile>
+    <Compile Include="kesim_durumu.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="kesim_durumu.Designer.cs">
+      <DependentUpon>kesim_durumu.cs</DependentUpon>
+    </Compile>
+    <Compile Include="personeller.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="personeller.Designer.cs">
+      <DependentUpon>personeller.cs</DependentUpon>
+    </Compile>
+    <Compile Include="personel_ekle.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="personel_ekle.Designer.cs">
+      <DependentUpon>personel_ekle.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="sayaci_durumu.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="sayaci_durumu.Designer.cs">
+      <DependentUpon>sayaci_durumu.cs</DependentUpon>
+    </Compile>
+    <Compile Include="sevkiyat_malzemeleri.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="sevkiyat_malzemeleri.Designer.cs">
+      <DependentUpon>sevkiyat_malzemeleri.cs</DependentUpon>
+    </Compile>
     <Compile Include="yoneticipaneli.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -63,6 +112,9 @@
     </Compile>
     <EmbeddedResource Include="giris.resx">
       <DependentUpon>giris.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="personel_ekle.resx">
+      <DependentUpon>personel_ekle.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
