--- a/uretimrecetesi.csproj
+++ b/uretimrecetesi.csproj
@@ -85,12 +85,6 @@
     <Compile Include="personeller.Designer.cs">
       <DependentUpon>personeller.cs</DependentUpon>
     </Compile>
-    <Compile Include="personel_ekle.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="personel_ekle.Designer.cs">
-      <DependentUpon>personel_ekle.cs</DependentUpon>
-    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="sayaci_durumu.cs">
@@ -113,9 +107,6 @@
     </Compile>
     <EmbeddedResource Include="giris.resx">
       <DependentUpon>giris.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="personel_ekle.resx">
-      <DependentUpon>personel_ekle.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -142,6 +133,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\images-personel-erkek_QBNW-300x300.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\personelerkek.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
