--- a/uretimrecetesi.csproj
+++ b/uretimrecetesi.csproj
@@ -85,12 +85,6 @@
     <Compile Include="personeller.Designer.cs">
       <DependentUpon>personeller.cs</DependentUpon>
     </Compile>
-    <Compile Include="personel_ekle.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="personel_ekle.Designer.cs">
-      <DependentUpon>personel_ekle.cs</DependentUpon>
-    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="sayaci_durumu.cs">
@@ -114,8 +108,8 @@
     <EmbeddedResource Include="giris.resx">
       <DependentUpon>giris.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="personel_ekle.resx">
-      <DependentUpon>personel_ekle.cs</DependentUpon>
+    <EmbeddedResource Include="personeller.resx">
+      <DependentUpon>personeller.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
