--- a/uretimrecetesi.csproj
+++ b/uretimrecetesi.csproj
@@ -99,6 +99,12 @@
     <Compile Include="sevkiyat_malzemeleri.Designer.cs">
       <DependentUpon>sevkiyat_malzemeleri.cs</DependentUpon>
     </Compile>
+    <Compile Include="uretimsemasi.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="uretimsemasi.Designer.cs">
+      <DependentUpon>uretimsemasi.cs</DependentUpon>
+    </Compile>
     <Compile Include="yoneticipaneli.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -138,6 +144,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="sevkiyat_malzemeleri.resx">
       <DependentUpon>sevkiyat_malzemeleri.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="uretimsemasi.resx">
+      <DependentUpon>uretimsemasi.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="yoneticipaneli.resx">
       <DependentUpon>yoneticipaneli.cs</DependentUpon>
